# organization-search

./: .dockerignore  .env  .env.example  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_unique_activity_name.py
app/: main.py  seed.py
app/api/: deps.py
app/api/routers/: activities.py  buildings.py  organizations.py  search.py
app/core/: config.py  exceptions.py  security.py
app/db/: session.py
app/models/: __init__.py  activity.py  building.py  organization.py
app/repositories/: __init__.py  activity.py  building.py  organization.py
app/schemas/: __init__.py  activity.py  building.py  organization.py
app/services/: __init__.py  building.py  organization.py  search.py
tests/: conftest.py  test_activity_level.py  test_activity_unique_and_seed.py  test_api.py
